// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`email passwordless renders a captcha 1`] = `
<DocumentFragment>
  <div>
    <div
      data-__type="social_buttons_pane"
      data-instructions="socialLoginInstructions"
      data-lock="model"
      data-signup="true"
    />
    <div
      data-__type="pane_separator"
    />
    <p>
      passwordlessEmailAlternativeInstructions
    </p>
    <div
      data-__type="email_pane"
      data-i18n="[object Object]"
      data-lock="model"
      data-placeholder="emailInputPlaceholder"
      data-strictvalidation="false"
    />
    <div
      data-__type="captcha_pane"
      data-flow="passwordless"
      data-i18n="[object Object]"
      data-lock="model"
    />
  </div>
</DocumentFragment>
`;

exports[`email passwordless renders correctly 1`] = `
<DocumentFragment>
  <div>
    <div
      data-__type="social_buttons_pane"
      data-instructions="socialLoginInstructions"
      data-lock="model"
      data-signup="true"
    />
    <div
      data-__type="pane_separator"
    />
    <p>
      passwordlessEmailAlternativeInstructions
    </p>
    <div
      data-__type="email_pane"
      data-i18n="[object Object]"
      data-lock="model"
      data-placeholder="emailInputPlaceholder"
      data-strictvalidation="false"
    />
  </div>
</DocumentFragment>
`;
